// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages About should render the page 1`] = `
Array [
  <svg
    height={0}
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    version="1.1"
    width={0}
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <symbol
        id="icon-heart"
        viewBox="0 0 64 64"
      >
        <title>
          heart
        </title>
        <path
          className="heart"
          d="m61.1 18.2c-6.4-17-27.2-9.4-29.1-.9-2.6-9-22.9-15.7-29.1.9-6.9 18.5 26.7 35.1 29.1 37.8 2.4-2.2 36-19.6 29.1-37.8"
          fill="#ff5a79"
        />
      </symbol>
      <symbol
        id="icon-star"
        viewBox="0 0 64 64"
      >
        <title>
          star
        </title>
        <path
          className="twitter"
          d="M62,25.2H39.1L32,3l-7.1,22.2H2l18.5,13.7l-7,22.1L32,47.3L50.5,61l-7.1-22.2L62,25.2z"
          fill="#FFDD67"
        />
      </symbol>
      <symbol
        id="icon-twitter"
        viewBox="0 0 64 64"
      >
        <title>
          twitter
        </title>
        <g
          fill="#42ade2"
        >
          <path
            d="m59.8 24.3c0 0 1.1-6.2-3.5-3.4 0 0-.4-6.3-4.3-1.9 0 0-2.1-3.9-4.4-.3-3.1 4.8-5.2 12.4-3.2 25l3.8-2.5c2.7-7.9 12.4-8.8 13.7-13.1.9-3-2.1-3.8-2.1-3.8"
          />
          <path
            d="m22.1 17.6l-9.9 3.6c2.2-12 16.6-11.2 16.6-11.2s-6.8 3.2-6.7 7.6"
          />
          <path
            d="m23.7 19.8l-10.5 1.4c4.8-11.2 18.7-7.3 18.7-7.3s-7.3 1.6-8.2 5.9"
          />
        </g>
        <g
          fill="#ffd93b"
        >
          <path
            d="m2 29l5.4-1.4v3.6c0-.1-3.3-.6-5.4-2.2"
          />
          <path
            d="M7.4,27.5L2,24.8c3.6-2.8,7.7-1.9,7.7-1.9L7.4,27.5z"
          />
        </g>
        <g
          fill="#e08828"
        >
          <path
            d="m33.8 53h-2.1v7.9c-.3.1-2.1-.1-2.9-.1-1.8 0-3.3 1.3-3.3 1.3h8.3v-9.1"
          />
          <path
            d="m25 53h-2.1v7.9c-.3.1-2.1-.1-2.9-.1-1.8 0-3.3 1.3-3.3 1.3h8.3v-9.1"
          />
          <path
            d="m54 36.2c3.9 0-4.1 17.5-23.3 17.5-13 0-23.9-5.2-23.9-21.5 0-10.1 6.4-18.3 19.5-15 13.3 3.5 6.5 19 27.7 19"
            fill="#42ade2"
          />
          <path
            d="m37.6 51.7c-15.6 0-14-12-27.9-11.2 5.1 15.8 27.9 11.2 27.9 11.2"
            fill="#fff"
          />
          <path
            d="m39.1 29.2c-10-9.8-20.2 6.2-7.9 12.6 12.1 6.2 20.4-4.8 20.4-4.8s-6.1-1.5-12.5-7.8"
            fill="#297b9d"
          />
        </g>
        <circle
          cx="15.1"
          cy="24.9"
          fill="#3e4347"
          r="2.5"
        />
      </symbol>
    </defs>
  </svg>,
  <nav
    className="nav row middle-xs"
  >
    <input
      className="c-hamburger__input"
      id="hamburger-menu"
      type="checkbox"
    />
    <label
      className="c-hamburger c-hamburger--htx"
      htmlFor="hamburger-menu"
    >
      <span />
    </label>
    <div
      className="modal"
    >
      <div
        className="modal-content"
      >
        <ul
          className="navigation"
        >
          <li
            className="item"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
            >
              Home
            </a>
          </li>
          <li
            className="item"
          >
            <a
              href="/about"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="item"
          >
            <a
              href="/contributors"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
            >
              Contributors
            </a>
          </li>
          <li
            className="item"
          >
            <a
              href="https://github.com/carloscuesta/gitmoji"
              onMouseDown={[Function]}
            >
              GitHub
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>,
  <header
    className="header"
  >
    <svg
      className="gitmoji-logo"
      height="137px"
      version="1.1"
      viewBox="0 0 457 137"
      width="457px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <title>
        gitmoji
      </title>
      <g
        fill="none"
        fillRule="evenodd"
        id="gitmoji"
      >
        <g
          id="Logo"
          transform="translate(-270 -430)"
        >
          <g
            id="gitmoji"
            transform="translate(270 430)"
          >
            <path
              d="m17.5 106c0.6 4 2.4 7 5.3 10 2.9 2 6.6 4 11.2 4 6.1 0 10.7-2 14-5s4.9-8 4.9-15.1v-5.1c-1.5 2.3-3.8 4.4-7.1 6.2-3.2 2-7.5 3-12.6 3-4.7 0-9.1-1-13.1-3-4.1-1.5-7.6-3.9-10.5-7-2.91-3-5.22-6.7-6.9-10.8-1.68-4.2-2.52-8.8-2.52-13.8 0.004-4.7 0.82-9.1 2.45-13.3s3.89-7.9 6.77-11c2.9-3.2 6.3-5.7 10.4-7.5 4-1.8 8.5-2.7 13.4-2.7 5.6 0 10.1 1 13.4 3 3.2 2 5.5 4.2 6.7 6.6v-8.3h18.5v63.2c0 4.6-0.7 9.6-2.1 13.6-1.4 5-3.6 9-6.6 12-3 4-6.8 6-11.5 8s-10.4 4-17 4c-4.9 0-9.3-1-13.3-3-4-1-7.5-3-10.5-5-2.94-3-5.34-5-7.16-8-1.82-4-2.98-7-3.46-10l17.3-5zm19-18.6c4.9 0 8.9-1.6 12-4.9 3.1-3.2 4.7-7.6 4.7-13.1s-1.7-9.8-4.9-13c-3.3-3.2-7.2-4.8-11.8-4.8-2.4 0-4.7 0.4-6.7 1.2-2.1 0.8-3.9 2-5.4 3.6-1.6 1.6-2.8 3.5-3.6 5.7-0.9 2.2-1.3 4.6-1.3 7.3 0 5.6 1.6 10 4.7 13.2 3.2 3.2 7.3 4.8 12.3 4.8zm54.7 19.6v-70.8h18.8v70.8h-18.8zm-2.3-94c0-3.39 1.1-6.22 3.4-8.53 2.3-2.3 5.1-3.45 8.7-3.45 3 0 6 1.15 8 3.45 2 2.31 4 5.14 4 8.53 0 3.1-2 5.9-4 8.2s-5 3.4-8 3.4c-3.6 0-6.4-1.1-8.7-3.4s-3.4-5.1-3.4-8.2zm65.1 23.2h15v16.9h-15v29.7c0 3.1 1 5.2 2 6.4 2 1.2 4 1.8 7 1.8 1 0 2 0 3-0.1s2-0.3 3-0.5v15.6c-1 1-3 1-4 1-2 1-4 1-7 1-7 0-13-2-17-6-4-3.6-6-9-6-15.9v-33h-12v-16.9h3c4 0 7-1.1 8-3.3 2-2.1 3-4.8 3-8v-9.9h17v21.2zm30 70.8v-70.8h18v8.6c1-1.7 2-3.3 4-4.6 1-1.4 3-2.5 5-3.3 2-0.9 4-1.6 6-2 2-0.5 4-0.8 6-0.8 5 0 9 1 13 3.1 3 2 6 4.9 8 8.7 3-4.3 6-7.3 10-9.1s8-2.7 12-2.7 7 0.5 10 1.5c3 1.1 6 2.7 8 4.9 3 2.2 4 5 6 8.4 1 3.4 2 7.5 2 12.2v45.9h-19v-42c0-3.9 0-7.1-2-9.6-2-2.6-6-3.8-10-3.8s-7 1.3-10 4.1c-2 2.7-3 6-3 9.8v41.5h-19v-42c0-3.9-1-7.1-3-9.6-2-2.6-5-3.8-10-3.8-4 0-7 1.3-9 4-3 2.7-4 6-4 9.9v41.5h-19zm159-15.3c3 0 5-0.4 7-1.3 2-0.8 4-2.1 6-3.8 1-1.7 3-3.7 4-6.2s1-5.5 1-8.8c0-3.4 0-6.3-1-8.8s-3-4.6-4-6.3c-2-1.7-4-2.9-6-3.8s-4-1.3-7-1.3c-2 0-4 0.4-6 1.3-3 0.9-5 2.1-6 3.8-2 1.7-3 3.8-4 6.3s-2 5.4-2 8.8c0 3.3 1 6.3 2 8.8s2 4.5 4 6.2c1 1.7 3 3 6 3.8 2 0.9 4 1.3 6 1.3zm0-57.7c6 0 11 0.9 15 2.8 5 1.9 9 4.5 12 7.8s6 7.2 8 11.9c2 4.6 2 9.6 2 15.1 0 5.4 0 10.5-2 15-2 4.6-5 8.5-8 11.9-3 3.5-7 5.5-12 7.5-4 2-9 3-15 3-5 0-10-1-14-3-5-2-9-4-12-7.5-4-3.4-6-7.3-8-11.9-2-4.5-3-9.6-3-15 0-5.5 1-10.5 3-15.1 2-4.7 4-8.6 8-11.9 3-3.3 7-5.9 12-7.8 4-1.9 9-2.8 14-2.8zm53 2.2h19v76.8c0 4-1 7-2 10-1 2-2 5-4 7s-4 4-7 5-6 2-9 2-6-1-8-1c-2-1-3-1-3-1v-16h2c1 1 2 1 4 1 3 0 5-1 6-3 1-1 2-3 2-6v-74.8zm-3-23.4c0-3.34 1-6.17 4-8.47 2-2.31 5-3.46 8-3.46 3 0.002 6 1.15 9 3.46 2 2.3 3 5.13 3 8.47 0 3.3-1 6-3 8.3-3 2.3-6 3.4-9 3.4s-6-1.1-8-3.4c-3-2.3-4-5-4-8.3zm42 94.2v-70.8h19v70.8h-19zm-2-94c0-3.39 1-6.22 3-8.53 3-2.3 5-3.45 9-3.45 3 0 6 1.15 8 3.45 2 2.31 4 5.14 4 8.53 0 3.1-2 5.9-4 8.2s-5 3.4-8 3.4c-4 0-6-1.1-9-3.4-2-2.3-3-5.1-3-8.2z"
              fill="#000"
            />
          </g>
        </g>
      </g>
    </svg>
    <h2>
      An emoji guide for your commit messages
    </h2>
    <div
      className="header-buttons"
    >
      <a
        className="btn btn-pink"
        href="https://github.com/carloscuesta/gitmoji"
      >
        <svg
          className="icon icon-star"
        >
          <use
            xlinkHref="#icon-star"
          />
        </svg>
        GitHub
      </a>
      <a
        className="btn btn-pink"
        href="https://twitter.com/intent/tweet?text=gitmoji%20%E2%80%93%20An%20%23emoji%20guide%20for%20your%20commit%20messages%20by%20%40crloscuesta%20%F0%9F%98%8D%F0%9F%98%9C&url=https://gitmoji.carloscuesta.me"
        target="_blank"
      >
        <svg
          className="icon icon-twitter"
        >
          <use
            xlinkHref="#icon-twitter"
          />
        </svg>
        Tweet
      </a>
    </div>
  </header>,
  <main
    className="wrap"
  >
    <section>
      <h1>
        About
      </h1>
      <p>
        <strong>
          Gitmoji is an emoji guide for GitHub commit messages
        </strong>
        . Aims to be a standarization cheatsheet - guide for using
         
        <a
          href="https://emoji.muan.co"
        >
          emojis
        </a>
         on GitHub's commit messages.
      </p>
      <p>
        <strong>
          Using emojis
        </strong>
         on 
        <strong>
          commit messages
        </strong>
         
        provides an 
        <strong>
          easy way
        </strong>
         of
         
        <strong>
          identifying the purpose or intention of a commit
        </strong>
         with only looking at the emojis used. As there are a lot of different emojis I found the need of creating a guide that can help to use emojis easier.
      </p>
      <p>
        This project is Open Source, that means everyone can participate, suggesting, discussing and adding new emojis. Take a look at the
         
        <a
          href="#contributing-gitmoji"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          contributing section
        </a>
         
        and
         
        <a
          href="https://github.com/carloscuesta/gitmoji/blob/master/.github/CONTRIBUTING.md"
        >
          guidelines for contributing
        </a>
        .
      </p>
      <div>
        <a
          className="btn btn-pink"
          href="https://github.com/carloscuesta/gitmoji"
        >
          <svg
            className="icon icon-star"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
          GitHub
        </a>
        <a
          className="btn btn-pink"
          href="https://twitter.com/intent/tweet?text=gitmoji%20%E2%80%93%20An%20%23emoji%20guide%20for%20your%20commit%20messages%20by%20%40crloscuesta%20%F0%9F%98%8D%F0%9F%98%9C&url=https://gitmoji.carloscuesta.me"
          target="_blank"
        >
          <svg
            className="icon icon-twitter"
          >
            <use
              xlinkHref="#icon-twitter"
            />
          </svg>
          Tweet
        </a>
      </div>
    </section>
    <section>
      <h1>
        Using gitmoji with
         
        <a
          href="https://github.com/carloscuesta/gitmoji-cli"
        >
          gitmoji-cli
        </a>
      </h1>
      <p>
        An easy solution for using gitmoji from your command line, is to install
         
        <a
          href="https://github.com/carloscuesta/gitmoji-cli"
        >
          gitmoji-cli
        </a>
        . A gitmoji interactive client for using emojis on commit messages.
      </p>
      <pre>
        <code>
          $ npm i -g gitmoji-cli
        </code>
      </pre>
    </section>
    <section>
      <h1
        id="contributing-gitmoji"
      >
        Contributing to gitmoji
      </h1>
      <p>
        Contributing to gitmoji is a piece of 🍰! This project is a static website built with 
        <i>
          Next.js
        </i>
        . All the gitmojis displayed are rendered from a JSON file. Before submitting any pull request, please follow these steps:
      </p>
      <ol>
        <li>
          <a
            href="https://github.com/carloscuesta/gitmoji/issues/new"
          >
            Create an issue
          </a>
           
          filling the template.
        </li>
        <li>
          After discussing the idea, feature or suggestion,
           
          <a
            href="https://github.com/carloscuesta/gitmoji/fork"
          >
            fork gitmoji
          </a>
        </li>
        <li>
          Create a new branch with the feature name. (Eg: add-emoji-deploy, fix-website-header)
        </li>
        <li>
          Make your changes and send a
           
          <a
            href="https://help.github.com/articles/creating-a-pull-request/"
          >
            pull request
             
          </a>
          .
        </li>
      </ol>
    </section>
  </main>,
  <footer
    className="footer"
  >
    <div
      className="wrap"
    >
      <div
        className="row middle-xs"
      >
        <div
          className="col-sm-6 made-with-love"
        >
          <h3>
            Made with 
            <svg
              className="icon icon-heart"
            >
              <use
                xlinkHref="#icon-heart"
              />
            </svg>
             by
             
            <a
              href="https://carloscuesta.me"
            >
              Carlos Cuesta
            </a>
          </h3>
        </div>
        <div
          className="col-sm-6 footer-nav"
        >
          <nav>
            <a
              href="/about"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
            <a
              href="/contributors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Contributors
            </a>
            <a
              href="https://github.com/carloscuesta/gitmoji"
            >
              GitHub
            </a>
          </nav>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`Pages Contributors should render the page 1`] = `
Array [
  <svg
    height={0}
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    version="1.1"
    width={0}
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <symbol
        id="icon-heart"
        viewBox="0 0 64 64"
      >
        <title>
          heart
        </title>
        <path
          className="heart"
          d="m61.1 18.2c-6.4-17-27.2-9.4-29.1-.9-2.6-9-22.9-15.7-29.1.9-6.9 18.5 26.7 35.1 29.1 37.8 2.4-2.2 36-19.6 29.1-37.8"
          fill="#ff5a79"
        />
      </symbol>
      <symbol
        id="icon-star"
        viewBox="0 0 64 64"
      >
        <title>
          star
        </title>
        <path
          className="twitter"
          d="M62,25.2H39.1L32,3l-7.1,22.2H2l18.5,13.7l-7,22.1L32,47.3L50.5,61l-7.1-22.2L62,25.2z"
          fill="#FFDD67"
        />
      </symbol>
      <symbol
        id="icon-twitter"
        viewBox="0 0 64 64"
      >
        <title>
          twitter
        </title>
        <g
          fill="#42ade2"
        >
          <path
            d="m59.8 24.3c0 0 1.1-6.2-3.5-3.4 0 0-.4-6.3-4.3-1.9 0 0-2.1-3.9-4.4-.3-3.1 4.8-5.2 12.4-3.2 25l3.8-2.5c2.7-7.9 12.4-8.8 13.7-13.1.9-3-2.1-3.8-2.1-3.8"
          />
          <path
            d="m22.1 17.6l-9.9 3.6c2.2-12 16.6-11.2 16.6-11.2s-6.8 3.2-6.7 7.6"
          />
          <path
            d="m23.7 19.8l-10.5 1.4c4.8-11.2 18.7-7.3 18.7-7.3s-7.3 1.6-8.2 5.9"
          />
        </g>
        <g
          fill="#ffd93b"
        >
          <path
            d="m2 29l5.4-1.4v3.6c0-.1-3.3-.6-5.4-2.2"
          />
          <path
            d="M7.4,27.5L2,24.8c3.6-2.8,7.7-1.9,7.7-1.9L7.4,27.5z"
          />
        </g>
        <g
          fill="#e08828"
        >
          <path
            d="m33.8 53h-2.1v7.9c-.3.1-2.1-.1-2.9-.1-1.8 0-3.3 1.3-3.3 1.3h8.3v-9.1"
          />
          <path
            d="m25 53h-2.1v7.9c-.3.1-2.1-.1-2.9-.1-1.8 0-3.3 1.3-3.3 1.3h8.3v-9.1"
          />
          <path
            d="m54 36.2c3.9 0-4.1 17.5-23.3 17.5-13 0-23.9-5.2-23.9-21.5 0-10.1 6.4-18.3 19.5-15 13.3 3.5 6.5 19 27.7 19"
            fill="#42ade2"
          />
          <path
            d="m37.6 51.7c-15.6 0-14-12-27.9-11.2 5.1 15.8 27.9 11.2 27.9 11.2"
            fill="#fff"
          />
          <path
            d="m39.1 29.2c-10-9.8-20.2 6.2-7.9 12.6 12.1 6.2 20.4-4.8 20.4-4.8s-6.1-1.5-12.5-7.8"
            fill="#297b9d"
          />
        </g>
        <circle
          cx="15.1"
          cy="24.9"
          fill="#3e4347"
          r="2.5"
        />
      </symbol>
    </defs>
  </svg>,
  <nav
    className="nav row middle-xs"
  >
    <input
      className="c-hamburger__input"
      id="hamburger-menu"
      type="checkbox"
    />
    <label
      className="c-hamburger c-hamburger--htx"
      htmlFor="hamburger-menu"
    >
      <span />
    </label>
    <div
      className="modal"
    >
      <div
        className="modal-content"
      >
        <ul
          className="navigation"
        >
          <li
            className="item"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
            >
              Home
            </a>
          </li>
          <li
            className="item"
          >
            <a
              href="/about"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="item"
          >
            <a
              href="/contributors"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
            >
              Contributors
            </a>
          </li>
          <li
            className="item"
          >
            <a
              href="https://github.com/carloscuesta/gitmoji"
              onMouseDown={[Function]}
            >
              GitHub
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>,
  <header
    className="header"
  >
    <svg
      className="gitmoji-logo"
      height="137px"
      version="1.1"
      viewBox="0 0 457 137"
      width="457px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <title>
        gitmoji
      </title>
      <g
        fill="none"
        fillRule="evenodd"
        id="gitmoji"
      >
        <g
          id="Logo"
          transform="translate(-270 -430)"
        >
          <g
            id="gitmoji"
            transform="translate(270 430)"
          >
            <path
              d="m17.5 106c0.6 4 2.4 7 5.3 10 2.9 2 6.6 4 11.2 4 6.1 0 10.7-2 14-5s4.9-8 4.9-15.1v-5.1c-1.5 2.3-3.8 4.4-7.1 6.2-3.2 2-7.5 3-12.6 3-4.7 0-9.1-1-13.1-3-4.1-1.5-7.6-3.9-10.5-7-2.91-3-5.22-6.7-6.9-10.8-1.68-4.2-2.52-8.8-2.52-13.8 0.004-4.7 0.82-9.1 2.45-13.3s3.89-7.9 6.77-11c2.9-3.2 6.3-5.7 10.4-7.5 4-1.8 8.5-2.7 13.4-2.7 5.6 0 10.1 1 13.4 3 3.2 2 5.5 4.2 6.7 6.6v-8.3h18.5v63.2c0 4.6-0.7 9.6-2.1 13.6-1.4 5-3.6 9-6.6 12-3 4-6.8 6-11.5 8s-10.4 4-17 4c-4.9 0-9.3-1-13.3-3-4-1-7.5-3-10.5-5-2.94-3-5.34-5-7.16-8-1.82-4-2.98-7-3.46-10l17.3-5zm19-18.6c4.9 0 8.9-1.6 12-4.9 3.1-3.2 4.7-7.6 4.7-13.1s-1.7-9.8-4.9-13c-3.3-3.2-7.2-4.8-11.8-4.8-2.4 0-4.7 0.4-6.7 1.2-2.1 0.8-3.9 2-5.4 3.6-1.6 1.6-2.8 3.5-3.6 5.7-0.9 2.2-1.3 4.6-1.3 7.3 0 5.6 1.6 10 4.7 13.2 3.2 3.2 7.3 4.8 12.3 4.8zm54.7 19.6v-70.8h18.8v70.8h-18.8zm-2.3-94c0-3.39 1.1-6.22 3.4-8.53 2.3-2.3 5.1-3.45 8.7-3.45 3 0 6 1.15 8 3.45 2 2.31 4 5.14 4 8.53 0 3.1-2 5.9-4 8.2s-5 3.4-8 3.4c-3.6 0-6.4-1.1-8.7-3.4s-3.4-5.1-3.4-8.2zm65.1 23.2h15v16.9h-15v29.7c0 3.1 1 5.2 2 6.4 2 1.2 4 1.8 7 1.8 1 0 2 0 3-0.1s2-0.3 3-0.5v15.6c-1 1-3 1-4 1-2 1-4 1-7 1-7 0-13-2-17-6-4-3.6-6-9-6-15.9v-33h-12v-16.9h3c4 0 7-1.1 8-3.3 2-2.1 3-4.8 3-8v-9.9h17v21.2zm30 70.8v-70.8h18v8.6c1-1.7 2-3.3 4-4.6 1-1.4 3-2.5 5-3.3 2-0.9 4-1.6 6-2 2-0.5 4-0.8 6-0.8 5 0 9 1 13 3.1 3 2 6 4.9 8 8.7 3-4.3 6-7.3 10-9.1s8-2.7 12-2.7 7 0.5 10 1.5c3 1.1 6 2.7 8 4.9 3 2.2 4 5 6 8.4 1 3.4 2 7.5 2 12.2v45.9h-19v-42c0-3.9 0-7.1-2-9.6-2-2.6-6-3.8-10-3.8s-7 1.3-10 4.1c-2 2.7-3 6-3 9.8v41.5h-19v-42c0-3.9-1-7.1-3-9.6-2-2.6-5-3.8-10-3.8-4 0-7 1.3-9 4-3 2.7-4 6-4 9.9v41.5h-19zm159-15.3c3 0 5-0.4 7-1.3 2-0.8 4-2.1 6-3.8 1-1.7 3-3.7 4-6.2s1-5.5 1-8.8c0-3.4 0-6.3-1-8.8s-3-4.6-4-6.3c-2-1.7-4-2.9-6-3.8s-4-1.3-7-1.3c-2 0-4 0.4-6 1.3-3 0.9-5 2.1-6 3.8-2 1.7-3 3.8-4 6.3s-2 5.4-2 8.8c0 3.3 1 6.3 2 8.8s2 4.5 4 6.2c1 1.7 3 3 6 3.8 2 0.9 4 1.3 6 1.3zm0-57.7c6 0 11 0.9 15 2.8 5 1.9 9 4.5 12 7.8s6 7.2 8 11.9c2 4.6 2 9.6 2 15.1 0 5.4 0 10.5-2 15-2 4.6-5 8.5-8 11.9-3 3.5-7 5.5-12 7.5-4 2-9 3-15 3-5 0-10-1-14-3-5-2-9-4-12-7.5-4-3.4-6-7.3-8-11.9-2-4.5-3-9.6-3-15 0-5.5 1-10.5 3-15.1 2-4.7 4-8.6 8-11.9 3-3.3 7-5.9 12-7.8 4-1.9 9-2.8 14-2.8zm53 2.2h19v76.8c0 4-1 7-2 10-1 2-2 5-4 7s-4 4-7 5-6 2-9 2-6-1-8-1c-2-1-3-1-3-1v-16h2c1 1 2 1 4 1 3 0 5-1 6-3 1-1 2-3 2-6v-74.8zm-3-23.4c0-3.34 1-6.17 4-8.47 2-2.31 5-3.46 8-3.46 3 0.002 6 1.15 9 3.46 2 2.3 3 5.13 3 8.47 0 3.3-1 6-3 8.3-3 2.3-6 3.4-9 3.4s-6-1.1-8-3.4c-3-2.3-4-5-4-8.3zm42 94.2v-70.8h19v70.8h-19zm-2-94c0-3.39 1-6.22 3-8.53 3-2.3 5-3.45 9-3.45 3 0 6 1.15 8 3.45 2 2.31 4 5.14 4 8.53 0 3.1-2 5.9-4 8.2s-5 3.4-8 3.4c-4 0-6-1.1-9-3.4-2-2.3-3-5.1-3-8.2z"
              fill="#000"
            />
          </g>
        </g>
      </g>
    </svg>
    <h2>
      An emoji guide for your commit messages
    </h2>
  </header>,
  <main
    className="wrap"
  >
    <section>
      <h1>
        Contributors
      </h1>
      <div
        className="row center-xs"
      />
    </section>
  </main>,
  <footer
    className="footer"
  >
    <div
      className="wrap"
    >
      <div
        className="row middle-xs"
      >
        <div
          className="col-sm-6 made-with-love"
        >
          <h3>
            Made with 
            <svg
              className="icon icon-heart"
            >
              <use
                xlinkHref="#icon-heart"
              />
            </svg>
             by
             
            <a
              href="https://carloscuesta.me"
            >
              Carlos Cuesta
            </a>
          </h3>
        </div>
        <div
          className="col-sm-6 footer-nav"
        >
          <nav>
            <a
              href="/about"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
            <a
              href="/contributors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Contributors
            </a>
            <a
              href="https://github.com/carloscuesta/gitmoji"
            >
              GitHub
            </a>
          </nav>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`Pages Index should render the page 1`] = `
Array [
  <svg
    height={0}
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    version="1.1"
    width={0}
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <symbol
        id="icon-heart"
        viewBox="0 0 64 64"
      >
        <title>
          heart
        </title>
        <path
          className="heart"
          d="m61.1 18.2c-6.4-17-27.2-9.4-29.1-.9-2.6-9-22.9-15.7-29.1.9-6.9 18.5 26.7 35.1 29.1 37.8 2.4-2.2 36-19.6 29.1-37.8"
          fill="#ff5a79"
        />
      </symbol>
      <symbol
        id="icon-star"
        viewBox="0 0 64 64"
      >
        <title>
          star
        </title>
        <path
          className="twitter"
          d="M62,25.2H39.1L32,3l-7.1,22.2H2l18.5,13.7l-7,22.1L32,47.3L50.5,61l-7.1-22.2L62,25.2z"
          fill="#FFDD67"
        />
      </symbol>
      <symbol
        id="icon-twitter"
        viewBox="0 0 64 64"
      >
        <title>
          twitter
        </title>
        <g
          fill="#42ade2"
        >
          <path
            d="m59.8 24.3c0 0 1.1-6.2-3.5-3.4 0 0-.4-6.3-4.3-1.9 0 0-2.1-3.9-4.4-.3-3.1 4.8-5.2 12.4-3.2 25l3.8-2.5c2.7-7.9 12.4-8.8 13.7-13.1.9-3-2.1-3.8-2.1-3.8"
          />
          <path
            d="m22.1 17.6l-9.9 3.6c2.2-12 16.6-11.2 16.6-11.2s-6.8 3.2-6.7 7.6"
          />
          <path
            d="m23.7 19.8l-10.5 1.4c4.8-11.2 18.7-7.3 18.7-7.3s-7.3 1.6-8.2 5.9"
          />
        </g>
        <g
          fill="#ffd93b"
        >
          <path
            d="m2 29l5.4-1.4v3.6c0-.1-3.3-.6-5.4-2.2"
          />
          <path
            d="M7.4,27.5L2,24.8c3.6-2.8,7.7-1.9,7.7-1.9L7.4,27.5z"
          />
        </g>
        <g
          fill="#e08828"
        >
          <path
            d="m33.8 53h-2.1v7.9c-.3.1-2.1-.1-2.9-.1-1.8 0-3.3 1.3-3.3 1.3h8.3v-9.1"
          />
          <path
            d="m25 53h-2.1v7.9c-.3.1-2.1-.1-2.9-.1-1.8 0-3.3 1.3-3.3 1.3h8.3v-9.1"
          />
          <path
            d="m54 36.2c3.9 0-4.1 17.5-23.3 17.5-13 0-23.9-5.2-23.9-21.5 0-10.1 6.4-18.3 19.5-15 13.3 3.5 6.5 19 27.7 19"
            fill="#42ade2"
          />
          <path
            d="m37.6 51.7c-15.6 0-14-12-27.9-11.2 5.1 15.8 27.9 11.2 27.9 11.2"
            fill="#fff"
          />
          <path
            d="m39.1 29.2c-10-9.8-20.2 6.2-7.9 12.6 12.1 6.2 20.4-4.8 20.4-4.8s-6.1-1.5-12.5-7.8"
            fill="#297b9d"
          />
        </g>
        <circle
          cx="15.1"
          cy="24.9"
          fill="#3e4347"
          r="2.5"
        />
      </symbol>
    </defs>
  </svg>,
  <nav
    className="nav row middle-xs"
  >
    <input
      className="c-hamburger__input"
      id="hamburger-menu"
      type="checkbox"
    />
    <label
      className="c-hamburger c-hamburger--htx"
      htmlFor="hamburger-menu"
    >
      <span />
    </label>
    <div
      className="modal"
    >
      <div
        className="modal-content"
      >
        <ul
          className="navigation"
        >
          <li
            className="item"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
            >
              Home
            </a>
          </li>
          <li
            className="item"
          >
            <a
              href="/about"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="item"
          >
            <a
              href="/contributors"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
            >
              Contributors
            </a>
          </li>
          <li
            className="item"
          >
            <a
              href="https://github.com/carloscuesta/gitmoji"
              onMouseDown={[Function]}
            >
              GitHub
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>,
  <header
    className="header"
  >
    <svg
      className="gitmoji-logo"
      height="137px"
      version="1.1"
      viewBox="0 0 457 137"
      width="457px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <title>
        gitmoji
      </title>
      <g
        fill="none"
        fillRule="evenodd"
        id="gitmoji"
      >
        <g
          id="Logo"
          transform="translate(-270 -430)"
        >
          <g
            id="gitmoji"
            transform="translate(270 430)"
          >
            <path
              d="m17.5 106c0.6 4 2.4 7 5.3 10 2.9 2 6.6 4 11.2 4 6.1 0 10.7-2 14-5s4.9-8 4.9-15.1v-5.1c-1.5 2.3-3.8 4.4-7.1 6.2-3.2 2-7.5 3-12.6 3-4.7 0-9.1-1-13.1-3-4.1-1.5-7.6-3.9-10.5-7-2.91-3-5.22-6.7-6.9-10.8-1.68-4.2-2.52-8.8-2.52-13.8 0.004-4.7 0.82-9.1 2.45-13.3s3.89-7.9 6.77-11c2.9-3.2 6.3-5.7 10.4-7.5 4-1.8 8.5-2.7 13.4-2.7 5.6 0 10.1 1 13.4 3 3.2 2 5.5 4.2 6.7 6.6v-8.3h18.5v63.2c0 4.6-0.7 9.6-2.1 13.6-1.4 5-3.6 9-6.6 12-3 4-6.8 6-11.5 8s-10.4 4-17 4c-4.9 0-9.3-1-13.3-3-4-1-7.5-3-10.5-5-2.94-3-5.34-5-7.16-8-1.82-4-2.98-7-3.46-10l17.3-5zm19-18.6c4.9 0 8.9-1.6 12-4.9 3.1-3.2 4.7-7.6 4.7-13.1s-1.7-9.8-4.9-13c-3.3-3.2-7.2-4.8-11.8-4.8-2.4 0-4.7 0.4-6.7 1.2-2.1 0.8-3.9 2-5.4 3.6-1.6 1.6-2.8 3.5-3.6 5.7-0.9 2.2-1.3 4.6-1.3 7.3 0 5.6 1.6 10 4.7 13.2 3.2 3.2 7.3 4.8 12.3 4.8zm54.7 19.6v-70.8h18.8v70.8h-18.8zm-2.3-94c0-3.39 1.1-6.22 3.4-8.53 2.3-2.3 5.1-3.45 8.7-3.45 3 0 6 1.15 8 3.45 2 2.31 4 5.14 4 8.53 0 3.1-2 5.9-4 8.2s-5 3.4-8 3.4c-3.6 0-6.4-1.1-8.7-3.4s-3.4-5.1-3.4-8.2zm65.1 23.2h15v16.9h-15v29.7c0 3.1 1 5.2 2 6.4 2 1.2 4 1.8 7 1.8 1 0 2 0 3-0.1s2-0.3 3-0.5v15.6c-1 1-3 1-4 1-2 1-4 1-7 1-7 0-13-2-17-6-4-3.6-6-9-6-15.9v-33h-12v-16.9h3c4 0 7-1.1 8-3.3 2-2.1 3-4.8 3-8v-9.9h17v21.2zm30 70.8v-70.8h18v8.6c1-1.7 2-3.3 4-4.6 1-1.4 3-2.5 5-3.3 2-0.9 4-1.6 6-2 2-0.5 4-0.8 6-0.8 5 0 9 1 13 3.1 3 2 6 4.9 8 8.7 3-4.3 6-7.3 10-9.1s8-2.7 12-2.7 7 0.5 10 1.5c3 1.1 6 2.7 8 4.9 3 2.2 4 5 6 8.4 1 3.4 2 7.5 2 12.2v45.9h-19v-42c0-3.9 0-7.1-2-9.6-2-2.6-6-3.8-10-3.8s-7 1.3-10 4.1c-2 2.7-3 6-3 9.8v41.5h-19v-42c0-3.9-1-7.1-3-9.6-2-2.6-5-3.8-10-3.8-4 0-7 1.3-9 4-3 2.7-4 6-4 9.9v41.5h-19zm159-15.3c3 0 5-0.4 7-1.3 2-0.8 4-2.1 6-3.8 1-1.7 3-3.7 4-6.2s1-5.5 1-8.8c0-3.4 0-6.3-1-8.8s-3-4.6-4-6.3c-2-1.7-4-2.9-6-3.8s-4-1.3-7-1.3c-2 0-4 0.4-6 1.3-3 0.9-5 2.1-6 3.8-2 1.7-3 3.8-4 6.3s-2 5.4-2 8.8c0 3.3 1 6.3 2 8.8s2 4.5 4 6.2c1 1.7 3 3 6 3.8 2 0.9 4 1.3 6 1.3zm0-57.7c6 0 11 0.9 15 2.8 5 1.9 9 4.5 12 7.8s6 7.2 8 11.9c2 4.6 2 9.6 2 15.1 0 5.4 0 10.5-2 15-2 4.6-5 8.5-8 11.9-3 3.5-7 5.5-12 7.5-4 2-9 3-15 3-5 0-10-1-14-3-5-2-9-4-12-7.5-4-3.4-6-7.3-8-11.9-2-4.5-3-9.6-3-15 0-5.5 1-10.5 3-15.1 2-4.7 4-8.6 8-11.9 3-3.3 7-5.9 12-7.8 4-1.9 9-2.8 14-2.8zm53 2.2h19v76.8c0 4-1 7-2 10-1 2-2 5-4 7s-4 4-7 5-6 2-9 2-6-1-8-1c-2-1-3-1-3-1v-16h2c1 1 2 1 4 1 3 0 5-1 6-3 1-1 2-3 2-6v-74.8zm-3-23.4c0-3.34 1-6.17 4-8.47 2-2.31 5-3.46 8-3.46 3 0.002 6 1.15 9 3.46 2 2.3 3 5.13 3 8.47 0 3.3-1 6-3 8.3-3 2.3-6 3.4-9 3.4s-6-1.1-8-3.4c-3-2.3-4-5-4-8.3zm42 94.2v-70.8h19v70.8h-19zm-2-94c0-3.39 1-6.22 3-8.53 3-2.3 5-3.45 9-3.45 3 0 6 1.15 8 3.45 2 2.31 4 5.14 4 8.53 0 3.1-2 5.9-4 8.2s-5 3.4-8 3.4c-4 0-6-1.1-9-3.4-2-2.3-3-5.1-3-8.2z"
              fill="#000"
            />
          </g>
        </g>
      </g>
    </svg>
    <h2>
      An emoji guide for your commit messages
    </h2>
    <div
      className="header-buttons"
    >
      <a
        className="btn btn-pink"
        href="https://github.com/carloscuesta/gitmoji"
      >
        <svg
          className="icon icon-star"
        >
          <use
            xlinkHref="#icon-star"
          />
        </svg>
        GitHub
      </a>
      <a
        className="btn btn-pink"
        href="https://twitter.com/intent/tweet?text=gitmoji%20%E2%80%93%20An%20%23emoji%20guide%20for%20your%20commit%20messages%20by%20%40crloscuesta%20%F0%9F%98%8D%F0%9F%98%9C&url=https://gitmoji.carloscuesta.me"
        target="_blank"
      >
        <svg
          className="icon icon-twitter"
        >
          <use
            xlinkHref="#icon-twitter"
          />
        </svg>
        Tweet
      </a>
    </div>
  </header>,
  <main
    className="wrap"
  >
    <div
      className="row center-xs"
      id="gitmoji-list"
    >
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="art emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🎨"
            >
              🎨
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":art:"
            >
              <code>
                :art:
              </code>
            </div>
            <p>
              Improving structure / format of the code
              <br />
              改进代码结构或格式化代码
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="zap emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="⚡️"
            >
              ⚡️
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":zap:"
            >
              <code>
                :zap:
              </code>
            </div>
            <p>
              Improving performance
              <br />
              提升性能
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="fire emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🔥"
            >
              🔥
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":fire:"
            >
              <code>
                :fire:
              </code>
            </div>
            <p>
              Removing code or files
              <br />
              删除代码或文件
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="bug emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🐛"
            >
              🐛
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":bug:"
            >
              <code>
                :bug:
              </code>
            </div>
            <p>
              Fixing a bug
              <br />
              修复Bug
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="ambulance emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🚑"
            >
              🚑
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":ambulance:"
            >
              <code>
                :ambulance:
              </code>
            </div>
            <p>
              Critical hotfix
              <br />
              紧急修复
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="sparkles emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="✨"
            >
              ✨
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":sparkles:"
            >
              <code>
                :sparkles:
              </code>
            </div>
            <p>
              Introducing new features
              <br />
              介绍新特性
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="pencil emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="📝"
            >
              📝
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":pencil:"
            >
              <code>
                :pencil:
              </code>
            </div>
            <p>
              Writing docs
              <br />
              书写文档
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="rocket emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🚀"
            >
              🚀
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":rocket:"
            >
              <code>
                :rocket:
              </code>
            </div>
            <p>
              Deploying stuff
              <br />
              部署
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="lipstick emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="💄"
            >
              💄
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":lipstick:"
            >
              <code>
                :lipstick:
              </code>
            </div>
            <p>
              Adding or updating the UI and style files
              <br />
              添加或更改UI和样式文件
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="tada emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🎉"
            >
              🎉
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":tada:"
            >
              <code>
                :tada:
              </code>
            </div>
            <p>
              Begining a project
              <br />
              初始化项目
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="white-check-mark emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="✅"
            >
              ✅
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":white_check_mark:"
            >
              <code>
                :white_check_mark:
              </code>
            </div>
            <p>
              Adding or updating tests
              <br />
              添加或更改测试代码
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="lock emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🔒"
            >
              🔒
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":lock:"
            >
              <code>
                :lock:
              </code>
            </div>
            <p>
              Fixing security issues
              <br />
              修复安全问题
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="bookmark emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🔖"
            >
              🔖
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":bookmark:"
            >
              <code>
                :bookmark:
              </code>
            </div>
            <p>
              Releasing / Version tags
              <br />
              发布版本或版本标签
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="rotating-light emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🚨"
            >
              🚨
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":rotating_light:"
            >
              <code>
                :rotating_light:
              </code>
            </div>
            <p>
              Removing linter warnings
              <br />
              删除linter警告
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="construction emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🚧"
            >
              🚧
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":construction:"
            >
              <code>
                :construction:
              </code>
            </div>
            <p>
              Work in progress
              <br />
              工作进行中
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="green-heart emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="💚"
            >
              💚
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":green_heart:"
            >
              <code>
                :green_heart:
              </code>
            </div>
            <p>
              Fixing CI Build
              <br />
              修复持续集成构建
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="arrow-down emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="⬇️"
            >
              ⬇️
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":arrow_down:"
            >
              <code>
                :arrow_down:
              </code>
            </div>
            <p>
              Downgrading dependencies
              <br />
              降级依赖
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="arrow-up emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="⬆️"
            >
              ⬆️
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":arrow_up:"
            >
              <code>
                :arrow_up:
              </code>
            </div>
            <p>
              Upgrading dependencies
              <br />
              升级依赖
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="pushpin emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="📌"
            >
              📌
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":pushpin:"
            >
              <code>
                :pushpin:
              </code>
            </div>
            <p>
              Pinning dependencies to specific versions
              <br />
              固定依赖到特定版本
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="construction-worker emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="👷"
            >
              👷
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":construction_worker:"
            >
              <code>
                :construction_worker:
              </code>
            </div>
            <p>
              Adding or updating CI build system
              <br />
              添加或更改持续集成构建系统
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="chart-with-upwards-trend emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="📈"
            >
              📈
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":chart_with_upwards_trend:"
            >
              <code>
                :chart_with_upwards_trend:
              </code>
            </div>
            <p>
              Adding or updating analytics or tracking code
              <br />
              添加或更改分析追踪代码
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="recycle emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="♻️"
            >
              ♻️
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":recycle:"
            >
              <code>
                :recycle:
              </code>
            </div>
            <p>
              Refactoring code
              <br />
              代码重构
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="heavy-plus-sign emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="➕"
            >
              ➕
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":heavy_plus_sign:"
            >
              <code>
                :heavy_plus_sign:
              </code>
            </div>
            <p>
              Adding a dependency
              <br />
              添加依赖
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="heavy-minus-sign emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="➖"
            >
              ➖
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":heavy_minus_sign:"
            >
              <code>
                :heavy_minus_sign:
              </code>
            </div>
            <p>
              Removing a dependency
              <br />
              移除依赖
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="wrench emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🔧"
            >
              🔧
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":wrench:"
            >
              <code>
                :wrench:
              </code>
            </div>
            <p>
              Adding or updating configuration files
              <br />
              添加或更改配置文件
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="hammer emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🔨"
            >
              🔨
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":hammer:"
            >
              <code>
                :hammer:
              </code>
            </div>
            <p>
              Adding or updating build scripts
              <br />
              添加或更改构建脚本
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="globe-with-meridians emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🌐"
            >
              🌐
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":globe_with_meridians:"
            >
              <code>
                :globe_with_meridians:
              </code>
            </div>
            <p>
              Internationalization and localization
              <br />
              国际化与本地化
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="pencil2 emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="✏️"
            >
              ✏️
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":pencil2:"
            >
              <code>
                :pencil2:
              </code>
            </div>
            <p>
              Fixing typos
              <br />
              修改错别字
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="poop emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="💩"
            >
              💩
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":poop:"
            >
              <code>
                :poop:
              </code>
            </div>
            <p>
              Writing bad code that needs to be improved
              <br />
              需要改进的烂代码
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="rewind emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="⏪"
            >
              ⏪
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":rewind:"
            >
              <code>
                :rewind:
              </code>
            </div>
            <p>
              Reverting changes
              <br />
              回滚
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="twisted-rightwards-arrows emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🔀"
            >
              🔀
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":twisted_rightwards_arrows:"
            >
              <code>
                :twisted_rightwards_arrows:
              </code>
            </div>
            <p>
              Merging branches
              <br />
              合并分支
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="package emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="📦"
            >
              📦
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":package:"
            >
              <code>
                :package:
              </code>
            </div>
            <p>
              Adding or updating compiled files or packages
              <br />
              添加或更改编译文件或包配置文件
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="alien emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="👽"
            >
              👽
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":alien:"
            >
              <code>
                :alien:
              </code>
            </div>
            <p>
              Updating code due to external API changes
              <br />
              由于外部API的更改而更新了代码
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="truck emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🚚"
            >
              🚚
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":truck:"
            >
              <code>
                :truck:
              </code>
            </div>
            <p>
              Moving or renaming files
              <br />
              移动或重命名文件
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="page-facing-up emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="📄"
            >
              📄
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":page_facing_up:"
            >
              <code>
                :page_facing_up:
              </code>
            </div>
            <p>
              Adding or updating license
              <br />
              添加或更改许可证
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="boom emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="💥"
            >
              💥
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":boom:"
            >
              <code>
                :boom:
              </code>
            </div>
            <p>
              Introducing breaking changes
              <br />
              重大更改
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="bento emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🍱"
            >
              🍱
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":bento:"
            >
              <code>
                :bento:
              </code>
            </div>
            <p>
              Adding or updating assets
              <br />
              添加或更改资源
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="wheelchair emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="♿️"
            >
              ♿️
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":wheelchair:"
            >
              <code>
                :wheelchair:
              </code>
            </div>
            <p>
              Improving accessibility
              <br />
              提升可访问性
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="bulb emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="💡"
            >
              💡
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":bulb:"
            >
              <code>
                :bulb:
              </code>
            </div>
            <p>
              Adding or updating comments in source code
              <br />
              添加或更改源代码的注释
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="beers emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🍻"
            >
              🍻
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":beers:"
            >
              <code>
                :beers:
              </code>
            </div>
            <p>
              Writing code drunkenly
              <br />
              醉酒编写代码
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="speech-balloon emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="💬"
            >
              💬
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":speech_balloon:"
            >
              <code>
                :speech_balloon:
              </code>
            </div>
            <p>
              Adding or updating text and literals
              <br />
              添加或更改文本文字
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="card-file-box emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🗃"
            >
              🗃
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":card_file_box:"
            >
              <code>
                :card_file_box:
              </code>
            </div>
            <p>
              Performing database related changes
              <br />
              执行数据库相关的更改
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="loud-sound emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🔊"
            >
              🔊
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":loud_sound:"
            >
              <code>
                :loud_sound:
              </code>
            </div>
            <p>
              Adding or updating logs
              <br />
              添加或更改日志记录
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="mute emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🔇"
            >
              🔇
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":mute:"
            >
              <code>
                :mute:
              </code>
            </div>
            <p>
              Removing logs
              <br />
              移除日志记录
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="busts-in-silhouette emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="👥"
            >
              👥
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":busts_in_silhouette:"
            >
              <code>
                :busts_in_silhouette:
              </code>
            </div>
            <p>
              Adding or updating contributor(s).添加或更改贡献者
              <br />
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="children-crossing emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🚸"
            >
              🚸
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":children_crossing:"
            >
              <code>
                :children_crossing:
              </code>
            </div>
            <p>
              Improving user experience / usability
              <br />
              提高用户体验/可用性
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="building-construction emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🏗"
            >
              🏗
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":building_construction:"
            >
              <code>
                :building_construction:
              </code>
            </div>
            <p>
              Making architectural changes
              <br />
              更改架构
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="iphone emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="📱"
            >
              📱
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":iphone:"
            >
              <code>
                :iphone:
              </code>
            </div>
            <p>
              Working on responsive design
              <br />
              响应式设计
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="clown-face emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🤡"
            >
              🤡
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":clown_face:"
            >
              <code>
                :clown_face:
              </code>
            </div>
            <p>
              Mocking things
              <br />
              Mock数据
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="egg emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🥚"
            >
              🥚
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":egg:"
            >
              <code>
                :egg:
              </code>
            </div>
            <p>
              Adding or updating an easter egg
              <br />
              添加或更改复活节彩蛋
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="see-no-evil emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🙈"
            >
              🙈
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":see_no_evil:"
            >
              <code>
                :see_no_evil:
              </code>
            </div>
            <p>
              Adding or updating a .gitignore file
              <br />
              添加或更改.gitignore文件
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="camera-flash emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="📸"
            >
              📸
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":camera_flash:"
            >
              <code>
                :camera_flash:
              </code>
            </div>
            <p>
              Adding or updating snapshots
              <br />
               添加或更改快照
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="alembic emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="⚗"
            >
              ⚗
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":alembic:"
            >
              <code>
                :alembic:
              </code>
            </div>
            <p>
              Experimenting new things
              <br />
              尝试新事物
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="mag emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🔍"
            >
              🔍
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":mag:"
            >
              <code>
                :mag:
              </code>
            </div>
            <p>
              Improving SEO
              <br />
              优化SEO
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="label emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🏷️"
            >
              🏷️
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":label:"
            >
              <code>
                :label:
              </code>
            </div>
            <p>
              Adding or updating types (Flow, TypeScript).添加或更改类型（Flow，TypeScript）
              <br />
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="seedling emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🌱"
            >
              🌱
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":seedling:"
            >
              <code>
                :seedling:
              </code>
            </div>
            <p>
              Adding or updating seed files
              <br />
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="triangular-flag-on-post emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🚩"
            >
              🚩
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":triangular_flag_on_post:"
            >
              <code>
                :triangular_flag_on_post:
              </code>
            </div>
            <p>
              Adding, updating, or removing feature flags
              <br />
              添加，更新或删除功能标志
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="goal-net emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🥅"
            >
              🥅
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":goal_net:"
            >
              <code>
                :goal_net:
              </code>
            </div>
            <p>
              Catching errors
              <br />
              捕获错误
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="animation emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="💫"
            >
              💫
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":dizzy:"
            >
              <code>
                :dizzy:
              </code>
            </div>
            <p>
              Adding or updating animations and transitions
              <br />
              添加或更改动画和过渡
            </p>
          </div>
        </div>
      </article>
      <article
        className="emoji col-xs-12 col-sm-6 col-md-3"
      >
        <div
          className="emoji-card"
        >
          <header
            className="wastebasket emoji-header"
          >
            <span
              className="emoji-icon gitmoji-emoji"
              data-clipboard-text="🗑"
            >
              🗑
            </span>
          </header>
          <div
            className="emoji-info"
          >
            <div
              className="gitmoji-code"
              data-clipboard-text=":wastebasket:"
            >
              <code>
                :wastebasket:
              </code>
            </div>
            <p>
              Deprecating code that needs to be cleaned up
              <br />
              清理废弃的代码。
            </p>
          </div>
        </div>
      </article>
    </div>
  </main>,
  <footer
    className="footer"
  >
    <div
      className="wrap"
    >
      <div
        className="row middle-xs"
      >
        <div
          className="col-sm-6 made-with-love"
        >
          <h3>
            Made with 
            <svg
              className="icon icon-heart"
            >
              <use
                xlinkHref="#icon-heart"
              />
            </svg>
             by
             
            <a
              href="https://carloscuesta.me"
            >
              Carlos Cuesta
            </a>
          </h3>
        </div>
        <div
          className="col-sm-6 footer-nav"
        >
          <nav>
            <a
              href="/about"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
            <a
              href="/contributors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Contributors
            </a>
            <a
              href="https://github.com/carloscuesta/gitmoji"
            >
              GitHub
            </a>
          </nav>
        </div>
      </div>
    </div>
  </footer>,
]
`;
